# brain_food

./: README.md
codewars-golang/counting_duplicates/: go.mod  main.go  main_test.go
codewars-python/: grab_kata.py  pyproject.toml
codewars-python/direction_reduction/: main.py  test_main.py
codewars-python/does_my_number_look_big_in_thisy/: main.py  test_main.py
codewars-python/first_non-repeating_character/: kata.py  test_kata.py
codewars-python/give_me_a_diamond/: kata.py  test_kata.py
codewars/morse_code/first_kata/: main.go
coursera_rust_specialization/size_formatter/: Cargo.toml
coursera_rust_specialization/size_formatter/src/: main.rs
hackerrank/C/: hello_world.c  stdin_to_stdout.c  x
lisp/: hello.lisp
python_snippets/: Taskfile.yaml  f_quant_stack.py  groups_and_rings.py  monoids.py  pyproject.toml  with_returns.py
python_snippets/hott/: edu_hott_1_task_1.py
python_snippets/sortings/: array_chunking.py  binary_search.py  exponential_search.py  heap_sort.py  insertion_sort.py  knuth_sequence.py  merge_sort.py  order_statistics.py  quick_sort.py  quick_sort_tail_req.py  selection_and_bubble.py  shell_sort.py
python_snippets/sortings/submit/: task10.py  task12.py  task2_3.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py
python_snippets/sortings/task1_submit/: task1.py  task1_3.py
python_snippets/sortings/tests/: test_array_chunking.py  test_binary_search.py  test_exponential_search.py  test_heap_sort.py  test_insertion.py  test_ksort.py  test_merge_sort.py  test_order_statistics.py  (+3 more)
qsharp/teleportation/: Main.qs
