[tool.poetry]
name = "just a place for codding-in-small practice"
version = "0.1.0"
description = ""
authors = ["Ivan Zakutnii <zakutnii.ivan@gmail.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
httpx = "^0.27.0"
bs4 = "^0.0.2"
typer = "^0.12.3"
selenium = "^4.22.0"
playwright = "^1.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
